testsuite/css/parser/border-crash-3.24.errors
border-crash-3.24.css:3:3-10: error: GTK_CSS_PARSER_ERROR_SYNTAX
